src/objects/Contracted_Quote__c.object
<CustomObject>
    <label>Surround CQ</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>CQ Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Surround CQs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <fields>
        <fullName>CQ_Number__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <externalId>true</externalId>
        <label>CQ Number</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>CQ_Value__c</fullName>
        <label>CQ Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Expiration_Date__c</fullName>
        <description>Identifies when a contracted quote is no longer valid</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Expiration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Initial_Pricing_Date__c</fullName>
        <description>Will be Mapped to Final Price date from Surround. This field will be populated by Sharepoint via webmethods.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Initial Pricing Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Ready_for_Submission__c</fullName>
        <description>&quot;Date when CQ customer facing package is ready to be sent to the Customer
Equivalent to the final pricing date from Surround&quot;</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Ready for Submission</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SP_Email_Failure_Reason__c</fullName>
        <description>Stores a message from Sharepoint indicating why the customer email send failed.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>SP Email Failure Reason</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>SP_Email_Failure__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Identifies whether there was a failure in sending the customer email from Sharepoint.</description>
        <label>SP Email Failure</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SP_Email_failure_Timestamp__c</fullName>
        <description>Identifies Date/Time of failure in sending the customer email from Sharepoint.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>SP Email failure Timestamp</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Surround_Master_Quote__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Identifies whether the quote is flagged as a master quote in Surround.</description>
        <label>Surround Master Quote</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Surround_Priced_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Stores the reference to the Account record which was used for pricing in Surround.</description>
        <label>Surround Priced Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Surround CQs</relationshipLabel>
        <relationshipName>Surround_CQs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Surround_QTC_Code__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Surround QTC Code</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>eQuote_Error_Timestamp__c</fullName>
        <description>Stores Dtae/Time of message from STARS/Data Hub indicating why an eQuote XML transfer failed.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>eQuote Error Timestamp</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>eQuote_Error__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>eQuote Error</label>
        <length>128</length>
        <type>Text</type>
    </fields>
</CustomObject>